# Proiect-diagnoza-2023_2024

docs/: BUG_report.xlsx  requerments.xlsx
docs/pcb/emulation_bord/: emulation_bord.kicad_pro
docs/pcb/emulation_bord_proteus/: Backup Of pcb.pdsbak  emulation_board_pcb.00-VLADS-PC.Vlad.workspace  emulation_board_pcb.pdsprj  emulation_board_pcb.pdsprj.00-VLADS-PC.Vlad.workspace  emulation_bord.kicad_prl  pcb.00-VLADS-PC.Vlad.workspace  pcb.pdsprj
src/Dev/Code/: CMakeLists.txt  main.cpp  types.hpp
src/Dev/Code/DigitalSignals/: CMakeLists.txt  DigitalSignals.cpp  DigitalSignals.hpp
src/Dev/Code/ParmsBoard/: Board.hpp  CMakeLists.txt
src/Dev/Code/TaskScheguler/: CMakeLists.txt  TaskScheguler.cpp  TaskScheguler.hpp
src/Dev/Code/TempSensor/: CMakeLists.txt  SensorMap.hpp  TempSensor.cpp  TempSensor.hpp
src/HallOfShame/: main.cpp  main_old.cpp  main_proba.cpp
src/HallOfShame/TaskScheguler_new/: TaskScheguler.cpp  TaskScheguler.hpp
